Changes to index file

--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -4,5 +4,8 @@
     </head>
     <body>
         Hello Kalhara Batangala!!!!
+        <h1>This is a sample header</h1>
+
+        <p>Isuri Navodya</p>
     </body>
 </html>
